--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,23 +8,27 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* Set the attributes for the navigation bar at the top of the page. */
+nav {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/* Set position of the Horiseon logo on the navigation bar. */
+nav h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* Stylistically change color of the "seo" part of the logo. */
+nav h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* Set position of the navigation links to the top right portion of the navigation bar. */
+nav div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +36,29 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/* Remove any stylings from the list that will make up the navigation links. */
+nav div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* Set navigation links inline with each other with a margin between them. */
+nav div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* Color the navigation links. */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* Set font size for paragraphs on the page. */
 p {
     font-size: 16px;
 }
 
+/* Creates background image under the navigation bar */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,23 +68,27 @@ p {
     background-position: center;
 }
 
+/* This class will float an element to the left portion of its parent. */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* This class will float an element to the right portion of its parent. */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/* The main content of the page will be listed on the left 75% of the page. */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+/* The list of benefits and descriptions will be on the right 20% of the page. */
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,6 +99,7 @@ p {
     background-color: #2589bd;
 }
 
+/* Set blocks that will contain the benefits in the aside and color the text. */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,6 +115,7 @@ p {
     color: #ffffff;
 }
 
+/* Format headers of the benefits. */
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -116,6 +131,7 @@ p {
     text-align: center;
 }
 
+/* Format benefit icons. */
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -134,6 +150,7 @@ p {
     max-width: 150px;
 }
 
+/* Format content section blocks, background, and text. */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -161,6 +178,7 @@ p {
     color: #ffffff;
 }
 
+/* Format conten images. */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -173,6 +191,7 @@ p {
     max-height: 200px;
 }
 
+/* Format content headers. */
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -188,6 +207,7 @@ p {
     font-size: 36px;
 }
 
+/* Format footer */
 .footer {
     padding: 30px;
     clear: both;
